--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.5.3+2
   flutter_svg: ^1.1.1+1
-
+  google_mobile_ads: ^1.3.0
+  get: ^4.6.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -82,7 +83,10 @@ flutter:
         - asset: fonts/ubuntu/Ubuntu-Regular.ttf
     - family: UbuntuBlod
       fonts:
-        - asset: fonts/ubuntu/Ubuntu-Bold.ttf
+        - asset: fonts/ubuntu/Ubuntu-Bold.ttf  
+    - family: UbuntuMedium
+      fonts:
+        - asset: fonts/ubuntu/Ubuntu-Medium.ttf
         
   #   - family: Trajan Pro
   #     fonts:
