finalize the project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ flutter:
   assets:
     - asset/icon/
     - asset/image/
-    - asset/cities.json
+    - asset/cities.json  
+    - asset/pharmacies.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
